--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,13 @@
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: var(--third-color);
   font-family: var(--primary-font);
+}
+
+main {
+  flex: 1;
 }
 
 /* TOPBAR */
@@ -7,7 +15,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -54,6 +62,10 @@ header {
 .topbar__list li {
   padding: 0 10px;
 }
+
+/* 
+  INICIO INDEX
+*/
 
 /* CAPA */
 
@@ -276,11 +288,106 @@ header {
   padding-left: 5px;
 }
 
+/* 
+  FIM INDEX
+*/
+
+/* 
+  INICIO CARDAPIO/
+*/
+
+.main-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 600px;
+  background-color: var(--third-color);
+}
+
+.btn-prev,
+.btn-next {
+  width: 10%;
+  height: auto;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-prev img,
+.btn-next img {
+  height: 15%;
+}
+
+.carousel {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 80%;
+  gap: 5%;
+  overflow-x: auto;
+  scrollbar-width: none;
+  scroll-snap-type: x mandatory;
+}
+
+.card {
+  flex: 0 0 30%;
+  scroll-snap-align: start;
+}
+
+.card-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  padding: 10px 0;
+  background-color: var(--primary-color);
+}
+
+.card-header span {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+.card-img {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  background-color: var(--secund-color);
+}
+
+.card-img img {
+  width: 100%;
+}
+
+.card-body {
+  height: 250px;
+  background-color: var(--secund-color);
+}
+
+.card-body li {
+  padding: 10px 0 0 10px;
+  color: var(--primary-color);
+}
+
+/* 
+  FIM CARDAPIO
+*/
+
 /* FOOTER */
 
 footer {
   display: flex;
   flex-direction: column;
+  position: static;
+  bottom: 0;
+  right: 0;
+  left: 0;
   width: 100%;
   height: 300px;
   background-color: var(--secund-color);
@@ -375,5 +482,5 @@ footer {
 
 .footer__developer {
   font-weight: 550;
-  color: #5D3B9C
+  color: #5d3b9c;
 }
