--- a/src/style/style.css
+++ b/src/style/style.css
@@ -63,10 +63,6 @@ header {
   padding: 0 10px;
 }
 
-.topbar__close-menu {
-  display: none;
-}
-
 /* 
   INICIO INDEX
 */
@@ -114,7 +110,7 @@ header {
 .sobre {
   display: flex;
   width: 100%;
-  height: 600px;
+  min-height: 600px;
   background-color: var(--third-color);
   color: var(--primary-color);
 }
@@ -129,7 +125,7 @@ header {
 .sobre__right {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 600px;
   width: 50%;
   padding-top: 20px;
 }
@@ -163,7 +159,7 @@ header {
 }
 
 .sobre__right-img img {
-  max-height: 60%;
+  max-height: 200px;
   padding: 40px;
   transform: rotate(7.49deg);
   opacity: 40%;
@@ -173,7 +169,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  max-height: 600px;
   width: 50%;
 }
 
@@ -212,7 +208,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 550px;
+  min-height: 550px;
   background-color: var(--third-color);
   color: var(--primary-color);
   padding-top: 20px;
